@@ -1,3 +1,8 @@
+2007-11-20  Stefan Kost  <ensonic@users.sf.net>
+
+	* gst/gstpreset.c:
+	  Plug a leak and fix saving.
+
 2007-11-20  Sebastian Dröge  <slomo@circular-chaos.org>
 
 	* docs/gst/gstreamer-sections.txt:
